sdks/swift/Sources/CGoudEngine/include/goud_engine.h


typedef enum FfiPlaybackMode {
    Loop = 0,
    OneShot = 1,
} FfiPlaybackMode;
typedef struct FfiAnimationClipBuilder FfiAnimationClipBuilder;
typedef struct FfiSprite {
    uint64_t texture_handle;
    float color_r;
    float color_g;
    float color_b;
    float color_a;
    float source_rect_x;
    float source_rect_y;
    float source_rect_width;
    float source_rect_height;
    bool has_source_rect;
    bool flip_x;
    bool flip_y;
    int32_t z_layer;
    float anchor_x;
    float anchor_y;
    float custom_size_x;
    float custom_size_y;
    bool has_custom_size;
} FfiSprite;
typedef struct FfiSpriteBuilder {
    struct FfiSprite sprite;
} FfiSpriteBuilder;
typedef struct FfiColor {
    float r;
    float g;
    float b;
    float a;
} FfiColor;
typedef struct FfiRect {
    float x;
    float y;
    float width;
    float height;
} FfiRect;
typedef struct FfiVec2 {
    float x;
    float y;
} FfiVec2;
typedef struct FfiSpriteAnimator {
    uint32_t current_frame;
    float elapsed;
    bool playing;
    bool finished;
    float frame_duration;
    enum FfiPlaybackMode mode;
    uint32_t frame_count;
} FfiSpriteAnimator;
typedef struct FfiText {
    uint64_t font_handle;
    float font_size;
    float color_r;
    float color_g;
    float color_b;
    float color_a;
    uint8_t alignment;
    float max_width;
    bool has_max_width;
    float line_spacing;
} FfiText;
struct FfiSpriteBuilder *goud_sprite_builder_new(uint64_t texture_handle);
struct FfiSpriteBuilder *goud_sprite_builder_default(void);
struct FfiSpriteBuilder *goud_sprite_builder_with_texture(struct FfiSpriteBuilder *builder, uint64_t texture_handle);
struct FfiSpriteBuilder *goud_sprite_builder_with_color(struct FfiSpriteBuilder *builder, float r, float g, float b, float a);
struct FfiSpriteBuilder *goud_sprite_builder_with_alpha(struct FfiSpriteBuilder *builder, float alpha);
struct FfiSpriteBuilder *goud_sprite_builder_with_source_rect(struct FfiSpriteBuilder *builder, float x, float y, float width, float height);
struct FfiSpriteBuilder *goud_sprite_builder_with_flip_x(struct FfiSpriteBuilder *builder, bool flip);
struct FfiSpriteBuilder *goud_sprite_builder_with_flip_y(struct FfiSpriteBuilder *builder, bool flip);
struct FfiSpriteBuilder *goud_sprite_builder_with_flip(struct FfiSpriteBuilder *builder, bool flip_x, bool flip_y);
struct FfiSpriteBuilder *goud_sprite_builder_with_anchor(struct FfiSpriteBuilder *builder, float x, float y);
struct FfiSpriteBuilder *goud_sprite_builder_with_custom_size(struct FfiSpriteBuilder *builder, float width, float height);
struct FfiSprite goud_sprite_builder_build(struct FfiSpriteBuilder *builder);
void goud_sprite_builder_free(struct FfiSpriteBuilder *builder);
void goud_sprite_set_color(struct FfiSprite *sprite, float r, float g, float b, float a);
struct FfiColor goud_sprite_get_color(const struct FfiSprite *sprite);
struct FfiSprite goud_sprite_with_color(struct FfiSprite sprite, float r, float g, float b, float a);
void goud_sprite_set_alpha(struct FfiSprite *sprite, float alpha);
float goud_sprite_get_alpha(const struct FfiSprite *sprite);
struct FfiSprite goud_sprite_new(uint64_t texture_handle);
struct FfiSprite goud_sprite_default(void);
void goud_sprite_set_source_rect(struct FfiSprite *sprite, float x, float y, float width, float height);
void goud_sprite_clear_source_rect(struct FfiSprite *sprite);
bool goud_sprite_get_source_rect(const struct FfiSprite *sprite, struct FfiRect *out_rect);
bool goud_sprite_has_source_rect(const struct FfiSprite *sprite);
struct FfiSprite goud_sprite_with_source_rect(struct FfiSprite sprite, float x, float y, float width, float height);
void goud_sprite_set_flip_x(struct FfiSprite *sprite, bool flip);
bool goud_sprite_get_flip_x(const struct FfiSprite *sprite);
void goud_sprite_set_flip_y(struct FfiSprite *sprite, bool flip);
bool goud_sprite_get_flip_y(const struct FfiSprite *sprite);
void goud_sprite_set_flip(struct FfiSprite *sprite, bool flip_x, bool flip_y);
struct FfiSprite goud_sprite_with_flip_x(struct FfiSprite sprite, bool flip);
struct FfiSprite goud_sprite_with_flip_y(struct FfiSprite sprite, bool flip);
struct FfiSprite goud_sprite_with_flip(struct FfiSprite sprite, bool flip_x, bool flip_y);
bool goud_sprite_is_flipped(const struct FfiSprite *sprite);
void goud_sprite_set_anchor(struct FfiSprite *sprite, float x, float y);
struct FfiVec2 goud_sprite_get_anchor(const struct FfiSprite *sprite);
struct FfiSprite goud_sprite_with_anchor(struct FfiSprite sprite, float x, float y);
void goud_sprite_set_custom_size(struct FfiSprite *sprite, float width, float height);
void goud_sprite_clear_custom_size(struct FfiSprite *sprite);
bool goud_sprite_get_custom_size(const struct FfiSprite *sprite, struct FfiVec2 *out_size);
bool goud_sprite_has_custom_size(const struct FfiSprite *sprite);
struct FfiSprite goud_sprite_with_custom_size(struct FfiSprite sprite, float width, float height);
void goud_sprite_set_texture(struct FfiSprite *sprite, uint64_t handle);
uint64_t goud_sprite_get_texture(const struct FfiSprite *sprite);
struct FfiVec2 goud_sprite_size_or_rect(const struct FfiSprite *sprite);
struct FfiAnimationClipBuilder *goud_animation_clip_builder_new(float frame_duration, enum FfiPlaybackMode mode);
struct FfiAnimationClipBuilder *goud_animation_clip_builder_add_frame(struct FfiAnimationClipBuilder *builder, float x, float y, float w, float h);
void goud_animation_clip_builder_free(struct FfiAnimationClipBuilder *builder);
struct FfiSpriteAnimator goud_sprite_animator_from_clip(struct FfiAnimationClipBuilder *builder);
uint32_t goud_sprite_animator_get_current_frame(const struct FfiSpriteAnimator *animator);
bool goud_sprite_animator_is_playing(const struct FfiSpriteAnimator *animator);
bool goud_sprite_animator_is_finished(const struct FfiSpriteAnimator *animator);
struct FfiText goud_text_new(uint64_t font_handle);
struct FfiText goud_text_default(void);
void goud_text_set_font_size(struct FfiText *text, float size);
float goud_text_get_font_size(const struct FfiText *text);
void goud_text_set_color(struct FfiText *text, float r, float g, float b, float a);
float goud_text_get_color_r(const struct FfiText *text);
float goud_text_get_color_g(const struct FfiText *text);
float goud_text_get_color_b(const struct FfiText *text);
float goud_text_get_color_a(const struct FfiText *text);
void goud_text_set_alignment(struct FfiText *text, uint8_t alignment);
uint8_t goud_text_get_alignment(const struct FfiText *text);
void goud_text_set_max_width(struct FfiText *text, float width);
void goud_text_clear_max_width(struct FfiText *text);
float goud_text_get_max_width(const struct FfiText *text);
bool goud_text_has_max_width(const struct FfiText *text);
void goud_text_set_line_spacing(struct FfiText *text, float spacing);
float goud_text_get_line_spacing(const struct FfiText *text);
struct FfiColor goud_color_white(void);
struct FfiColor goud_color_black(void);
struct FfiColor goud_color_red(void);
struct FfiColor goud_color_green(void);
struct FfiColor goud_color_blue(void);
struct FfiColor goud_color_yellow(void);
struct FfiColor goud_color_transparent(void);
struct FfiColor goud_color_rgba(float r, float g, float b, float a);
struct FfiColor goud_color_rgb(float r, float g, float b);
struct FfiColor goud_color_from_u8(uint8_t r, uint8_t g, uint8_t b, uint8_t a);
struct FfiColor goud_color_from_hex(uint32_t hex);
struct FfiColor goud_color_lerp(struct FfiColor from, struct FfiColor to, float t);
struct FfiColor goud_color_with_alpha(struct FfiColor color, float alpha);