sdks/python/goud_engine/generated/_ffi.py


    # component_sprite
    _lib.goud_sprite_new.argtypes = [ctypes.c_uint64]
    _lib.goud_sprite_new.restype = FfiSprite
    _lib.goud_sprite_default.argtypes = []
    _lib.goud_sprite_default.restype = FfiSprite
    _lib.goud_sprite_set_color.argtypes = [ctypes.POINTER(FfiSprite), ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_set_color.restype = None
    _lib.goud_sprite_get_color.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_get_color.restype = FfiColor
    _lib.goud_sprite_with_color.argtypes = [FfiSprite, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_with_color.restype = FfiSprite
    _lib.goud_sprite_set_alpha.argtypes = [ctypes.POINTER(FfiSprite), ctypes.c_float]
    _lib.goud_sprite_set_alpha.restype = None
    _lib.goud_sprite_get_alpha.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_get_alpha.restype = ctypes.c_float
    _lib.goud_sprite_set_source_rect.argtypes = [ctypes.POINTER(FfiSprite), ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_set_source_rect.restype = None
    _lib.goud_sprite_clear_source_rect.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_clear_source_rect.restype = None
    _lib.goud_sprite_get_source_rect.argtypes = [ctypes.POINTER(FfiSprite), ctypes.POINTER(FfiRect)]
    _lib.goud_sprite_get_source_rect.restype = ctypes.c_bool
    _lib.goud_sprite_has_source_rect.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_has_source_rect.restype = ctypes.c_bool
    _lib.goud_sprite_with_source_rect.argtypes = [FfiSprite, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_with_source_rect.restype = FfiSprite
    _lib.goud_sprite_set_flip_x.argtypes = [ctypes.POINTER(FfiSprite), ctypes.c_bool]
    _lib.goud_sprite_set_flip_x.restype = None
    _lib.goud_sprite_get_flip_x.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_get_flip_x.restype = ctypes.c_bool
    _lib.goud_sprite_set_flip_y.argtypes = [ctypes.POINTER(FfiSprite), ctypes.c_bool]
    _lib.goud_sprite_set_flip_y.restype = None
    _lib.goud_sprite_get_flip_y.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_get_flip_y.restype = ctypes.c_bool
    _lib.goud_sprite_set_flip.argtypes = [ctypes.POINTER(FfiSprite), ctypes.c_bool, ctypes.c_bool]
    _lib.goud_sprite_set_flip.restype = None
    _lib.goud_sprite_with_flip_x.argtypes = [FfiSprite, ctypes.c_bool]
    _lib.goud_sprite_with_flip_x.restype = FfiSprite
    _lib.goud_sprite_with_flip_y.argtypes = [FfiSprite, ctypes.c_bool]
    _lib.goud_sprite_with_flip_y.restype = FfiSprite
    _lib.goud_sprite_with_flip.argtypes = [FfiSprite, ctypes.c_bool, ctypes.c_bool]
    _lib.goud_sprite_with_flip.restype = FfiSprite
    _lib.goud_sprite_is_flipped.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_is_flipped.restype = ctypes.c_bool
    _lib.goud_sprite_set_anchor.argtypes = [ctypes.POINTER(FfiSprite), ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_set_anchor.restype = None
    _lib.goud_sprite_get_anchor.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_get_anchor.restype = FfiVec2
    _lib.goud_sprite_with_anchor.argtypes = [FfiSprite, ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_with_anchor.restype = FfiSprite
    _lib.goud_sprite_set_custom_size.argtypes = [ctypes.POINTER(FfiSprite), ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_set_custom_size.restype = None
    _lib.goud_sprite_clear_custom_size.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_clear_custom_size.restype = None
    _lib.goud_sprite_get_custom_size.argtypes = [ctypes.POINTER(FfiSprite), ctypes.POINTER(FfiVec2)]
    _lib.goud_sprite_get_custom_size.restype = ctypes.c_bool
    _lib.goud_sprite_has_custom_size.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_has_custom_size.restype = ctypes.c_bool
    _lib.goud_sprite_with_custom_size.argtypes = [FfiSprite, ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_with_custom_size.restype = FfiSprite
    _lib.goud_sprite_set_texture.argtypes = [ctypes.POINTER(FfiSprite), ctypes.c_uint64]
    _lib.goud_sprite_set_texture.restype = None
    _lib.goud_sprite_get_texture.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_get_texture.restype = ctypes.c_uint64
    _lib.goud_sprite_size_or_rect.argtypes = [ctypes.POINTER(FfiSprite)]
    _lib.goud_sprite_size_or_rect.restype = FfiVec2
    _lib.goud_sprite_builder_new.argtypes = [ctypes.c_uint64]
    _lib.goud_sprite_builder_new.restype = ctypes.c_void_p
    _lib.goud_sprite_builder_default.argtypes = []
    _lib.goud_sprite_builder_default.restype = ctypes.c_void_p
    _lib.goud_sprite_builder_with_texture.argtypes = [ctypes.c_void_p, ctypes.c_uint64]
    _lib.goud_sprite_builder_with_texture.restype = ctypes.c_void_p
    _lib.goud_sprite_builder_with_color.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_builder_with_color.restype = ctypes.c_void_p
    _lib.goud_sprite_builder_with_alpha.argtypes = [ctypes.c_void_p, ctypes.c_float]
    _lib.goud_sprite_builder_with_alpha.restype = ctypes.c_void_p
    _lib.goud_sprite_builder_with_source_rect.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_builder_with_source_rect.restype = ctypes.c_void_p
    _lib.goud_sprite_builder_with_flip_x.argtypes = [ctypes.c_void_p, ctypes.c_bool]
    _lib.goud_sprite_builder_with_flip_x.restype = ctypes.c_void_p
    _lib.goud_sprite_builder_with_flip_y.argtypes = [ctypes.c_void_p, ctypes.c_bool]
    _lib.goud_sprite_builder_with_flip_y.restype = ctypes.c_void_p
    _lib.goud_sprite_builder_with_flip.argtypes = [ctypes.c_void_p, ctypes.c_bool, ctypes.c_bool]
    _lib.goud_sprite_builder_with_flip.restype = ctypes.c_void_p
    _lib.goud_sprite_builder_with_anchor.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_builder_with_anchor.restype = ctypes.c_void_p
    _lib.goud_sprite_builder_with_custom_size.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float]
    _lib.goud_sprite_builder_with_custom_size.restype = ctypes.c_void_p
    _lib.goud_sprite_builder_build.argtypes = [ctypes.c_void_p]
    _lib.goud_sprite_builder_build.restype = FfiSprite
    _lib.goud_sprite_builder_free.argtypes = [ctypes.c_void_p]
    _lib.goud_sprite_builder_free.restype = None

    # component_text
    _lib.goud_text_new.argtypes = [ctypes.c_uint64]
    _lib.goud_text_new.restype = FfiText
    _lib.goud_text_default.argtypes = []
    _lib.goud_text_default.restype = FfiText
    _lib.goud_text_set_font_size.argtypes = [ctypes.POINTER(FfiText), ctypes.c_float]
    _lib.goud_text_set_font_size.restype = None
    _lib.goud_text_get_font_size.argtypes = [ctypes.POINTER(FfiText)]
    _lib.goud_text_get_font_size.restype = ctypes.c_float
    _lib.goud_text_set_color.argtypes = [ctypes.POINTER(FfiText), ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_text_set_color.restype = None
    _lib.goud_text_get_color_r.argtypes = [ctypes.POINTER(FfiText)]
    _lib.goud_text_get_color_r.restype = ctypes.c_float
    _lib.goud_text_get_color_g.argtypes = [ctypes.POINTER(FfiText)]
    _lib.goud_text_get_color_g.restype = ctypes.c_float
    _lib.goud_text_get_color_b.argtypes = [ctypes.POINTER(FfiText)]
    _lib.goud_text_get_color_b.restype = ctypes.c_float
    _lib.goud_text_get_color_a.argtypes = [ctypes.POINTER(FfiText)]
    _lib.goud_text_get_color_a.restype = ctypes.c_float
    _lib.goud_text_set_alignment.argtypes = [ctypes.POINTER(FfiText), ctypes.c_uint8]
    _lib.goud_text_set_alignment.restype = None
    _lib.goud_text_get_alignment.argtypes = [ctypes.POINTER(FfiText)]
    _lib.goud_text_get_alignment.restype = ctypes.c_uint8
    _lib.goud_text_set_max_width.argtypes = [ctypes.POINTER(FfiText), ctypes.c_float]
    _lib.goud_text_set_max_width.restype = None
    _lib.goud_text_clear_max_width.argtypes = [ctypes.POINTER(FfiText)]
    _lib.goud_text_clear_max_width.restype = None
    _lib.goud_text_get_max_width.argtypes = [ctypes.POINTER(FfiText)]
    _lib.goud_text_get_max_width.restype = ctypes.c_float
    _lib.goud_text_has_max_width.argtypes = [ctypes.POINTER(FfiText)]
    _lib.goud_text_has_max_width.restype = ctypes.c_bool
    _lib.goud_text_set_line_spacing.argtypes = [ctypes.POINTER(FfiText), ctypes.c_float]
    _lib.goud_text_set_line_spacing.restype = None
    _lib.goud_text_get_line_spacing.argtypes = [ctypes.POINTER(FfiText)]
    _lib.goud_text_get_line_spacing.restype = ctypes.c_float

    # color
    _lib.goud_color_white.argtypes = []
    _lib.goud_color_white.restype = FfiColor
    _lib.goud_color_black.argtypes = []
    _lib.goud_color_black.restype = FfiColor
    _lib.goud_color_red.argtypes = []
    _lib.goud_color_red.restype = FfiColor
    _lib.goud_color_green.argtypes = []
    _lib.goud_color_green.restype = FfiColor
    _lib.goud_color_blue.argtypes = []
    _lib.goud_color_blue.restype = FfiColor
    _lib.goud_color_yellow.argtypes = []
    _lib.goud_color_yellow.restype = FfiColor
    _lib.goud_color_transparent.argtypes = []
    _lib.goud_color_transparent.restype = FfiColor
    _lib.goud_color_rgba.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_color_rgba.restype = FfiColor
    _lib.goud_color_rgb.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_color_rgb.restype = FfiColor
    _lib.goud_color_from_u8.argtypes = [ctypes.c_uint8, ctypes.c_uint8, ctypes.c_uint8, ctypes.c_uint8]
    _lib.goud_color_from_u8.restype = FfiColor
    _lib.goud_color_from_hex.argtypes = [ctypes.c_uint32]
    _lib.goud_color_from_hex.restype = FfiColor
    _lib.goud_color_lerp.argtypes = [FfiColor, FfiColor, ctypes.c_float]
    _lib.goud_color_lerp.restype = FfiColor
    _lib.goud_color_with_alpha.argtypes = [FfiColor, ctypes.c_float]
    _lib.goud_color_with_alpha.restype = FfiColor

    # sprite_animator
    _lib.goud_animation_clip_builder_new.argtypes = [ctypes.c_float, ctypes.c_int32]
    _lib.goud_animation_clip_builder_new.restype = ctypes.c_void_p
    _lib.goud_animation_clip_builder_add_frame.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_animation_clip_builder_add_frame.restype = ctypes.c_void_p
    _lib.goud_animation_clip_builder_free.argtypes = [ctypes.c_void_p]
    _lib.goud_animation_clip_builder_free.restype = None
    _lib.goud_sprite_animator_from_clip.argtypes = [ctypes.c_void_p]
    _lib.goud_sprite_animator_from_clip.restype = ctypes.c_uint64
    _lib.goud_sprite_animator_get_current_frame.argtypes = [ctypes.POINTER(FfiSpriteAnimator)]
    _lib.goud_sprite_animator_get_current_frame.restype = ctypes.c_uint32
    _lib.goud_sprite_animator_is_playing.argtypes = [ctypes.POINTER(FfiSpriteAnimator)]
    _lib.goud_sprite_animator_is_playing.restype = ctypes.c_bool
    _lib.goud_sprite_animator_is_finished.argtypes = [ctypes.POINTER(FfiSpriteAnimator)]
    _lib.goud_sprite_animator_is_finished.restype = ctypes.c_bool
